# 07-Web-HW

./: LICENSE  README.md  ai.py  cli_app.py  constants.py  create_tables.py  db.py  main.py  models.py  my_select.py  pyproject.toml  seed.py
alembic/: env.py
alembic/versions/: ca6d11849959_create_tables.py
