[tool.poetry]
name = "07-web-hw"
version = "0.1.0"
description = ""
authors = ["OleksiyM <oleksiym@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Faker = "^22.2.0"
SQLAlchemy = "^2.0.25"
alembic = "^1.13.1"
psycopg2-binary = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
